--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,184 @@
-<h1>Hi!</h1>
+<nav class="navbar navbar-light bg-light fixed-top">
+  <div class="container-fluid">
+    <%= link_to 'Logo', client_root_path, class: 'navbar-brand' %>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to "Log in", new_user_session_path, class: 'nav-link' unless user_signed_in? %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Sign up", new_user_registration_path, class: 'nav-link' unless user_signed_in? %>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Language</a>
+      </li>
+      <li class="nav-item">
+        <button class="navbar-toggler" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </li>
+    </ul>
+
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Info</h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body text-decoration-none">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <% if current_user %>
+            <li class="nav-item">
+              Username:
+            </li>
+            <li class="nav-item">
+              Email: <%= current_user.email %>
+            </li>
+            <li class="nav-item">
+              Coins:
+            </li>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary" type="button">CASH IN NOW</button>
+            </div>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My Profile</a>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: 'nav-link' %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">Facebook</a>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    </div>
+    <div class="carousel-inner" style="height: 45vh">
+      <div class="carousel-item active">
+        <img src="/mostafa-meraji-xnvRp8UyKL0-unsplash.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/lucas-wesney-s-y2HJElONo-unsplash.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+
+
+<section class=" text-light bg-dark" style="height: 4vh;">
+  <div>
+    <div class="container">
+      <div class="ticker">
+        <div class="title"></div>
+        <div class="news">
+          <marquee class="news-content">
+            <h4>Hello World</h4>
+          </marquee>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--feedback-->
+<section style="padding-top: 10px">
+  <div class="container overflow-hidden">
+    <h4>Winners Feedback</h4>
+    <div class="row">
+      <div class="col-4">
+        <div class="p-3 border bg-light">
+          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
+          <h6 class="text-center">Silver Stone</h6>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="p-3 border bg-light">
+          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
+          <h6 class="text-center">Silver Stone</h6>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="p-3 border bg-light">
+          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
+          <h6 class="text-center">Silver Stone</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--coming soon-->
+<section style="padding-bottom: 60px; padding-top: 10px">
+  <div class="container overflow-hidden ">
+    <h4>Coming Soon</h4>
+    <div class="row">
+      <div class="col-4">
+        <div class="p-3 border bg-light">
+          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
+          <h6 class="text-center">Silver Stone</h6>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="p-3 border bg-light">
+          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
+          <h6 class="text-center">Silver Stone</h6>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="p-3 border bg-light">
+          <img src="/fabian-heimann-4R_WEmhx8og-unsplash-removebg-preview.png" class="d-block w-100" alt="...">
+          <h6 class="text-center">Silver Stone</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--Footer-->
+<ul class="nav bg-light justify-content-center fixed-bottom ">
+  <li class="nav-item">
+    <a class="nav-link" href="#">Share</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Invite</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Lottery</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Shop</a>
+  </li>
+</ul>
 
 
 
-<%if current_user%>
-  <h3><%= link_to "LOGOUT", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" } %></h3>
-<% else %>
-  <h3><%= link_to 'LOGIN', new_user_session_path %></h3>
-<% end %>
+
+
+
+
+
+
+
