--- a/app/views/users/home/index.html.erb
+++ b/app/views/users/home/index.html.erb
@@ -42,7 +42,7 @@
               <a class="nav-link" href="#">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Profile</a>
+               <%= link_to "My Profile", users_profile_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
               <%= link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: 'nav-link' %>
@@ -170,6 +170,9 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Shop</a>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Me", users_profile_path, class: 'nav-link' if user_signed_in? %>
   </li>
 </ul>
 
