--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <nav class="navbar navbar-light bg-light fixed-top">
   <div class="container-fluid">
     <%= link_to 'Logo', client_root_path, class: 'navbar-brand' %>
@@ -66,68 +64,37 @@
 </nav>
 
 
-<!--Edit Page-->
-<div class="container" style="height: 100vh">
-  <div class="d-flex justify-content-center" >
-    <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
+<!--Show Page-->
+<div class="container" style="margin-top: 100px">
+  <div class="card">
+    <div class="card-body">
+      <div class="d-flex justify-content-md-center" >
+        <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
+      </div>
+      <div class="mb-3" style="margin: 20px">
+        <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username:</label>
+      </div>
+      <div class="mb-3" style="margin: 20px">
+        <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email: <%= current_user.email %></label>
+      </div>
+      <div class="mb-3" style="margin: 20px">
+        <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Coins:</label>
+      </div>
+
+      <div class="mb-3">
+        <a href="#" class="btn btn-primary form-control">Cash in Now</a>
+      </div>
+<!--action button-->
+      <div class="row">
+        <div class="col">
+          <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-primary form-control'%>
+        </div>
+        <div class="col">
+          <a href="#" class="btn btn-primary form-control">Address</a>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%#= render "users/shared/error_messages", resource: resource %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <div class="field">
-      <%= f.label :image %>
-      <%= f.file_field :image, class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :email %><br/>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', disabled: true %>
-    </div>
-
-    <div class="field">
-      <%= f.label :username, 'Username' %><br/>
-      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: 'form-control' %>
-    </div>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
-
-    <div class="field">
-      <%= f.label :phone, 'Phone Number' %><br/>
-      <%= f.text_field :phone, autofocus: true, autocomplete: "phone", class: 'form-control'%>
-    </div>
-
-    <div class="field">
-      <%= f.label :current_password %> <i>(We need your current password to confirm your changes)</i><br/>
-      <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br/>
-      <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
-      <% if @minimum_password_length %>
-        <br/>
-        <em><%= @minimum_password_length %> characters minimum</em>
-      <% end %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-    </div>
-<br>
-    <div class="row">
-        <div class="col">
-          <%= f.submit "Update", class: 'border btn btn-primary form-control' %>
-        </div>
-        <div class="col">
-          <%= link_to "Back", :back, class: 'btn btn-primary form-control' %>
-        </div>
-    </div>
-  <% end %>
 </div>
 
 <!--Footer-->
@@ -148,9 +115,6 @@
     <%= link_to "Me", users_profile_path, class: 'nav-link' %>
   </li>
 </ul>
-
-
-
 
 
 
