--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -99,4 +99,7 @@
   <li class="nav-item">
     <a class="nav-link" href="#">Shop</a>
   </li>
+  <li class="nav-item">
+    <%= link_to "Me", users_profile_path, class: 'nav-link'%>
+  </li>
 </ul>
