--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -66,35 +66,38 @@
 
 <!--Show Page-->
 <div class="container" style="margin-top: 100px">
-  <div class="card">
-    <div class="card-body">
-      <div class="d-flex justify-content-md-center" >
-        <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
-      </div>
-      <div class="mb-3" style="margin: 20px">
-        <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username:</label>
-      </div>
-      <div class="mb-3" style="margin: 20px">
-        <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email: <%= current_user.email %></label>
-      </div>
-      <div class="mb-3" style="margin: 20px">
-        <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Coins:</label>
-      </div>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+    <div class="card">
+      <div class="card-body">
 
-      <div class="mb-3">
-        <a href="#" class="btn btn-primary form-control">Cash in Now</a>
-      </div>
-<!--action button-->
-      <div class="row">
-        <div class="col">
-          <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-primary form-control'%>
+        <div class="d-flex justify-content-md-center" >
+          <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
         </div>
-        <div class="col">
-          <a href="#" class="btn btn-primary form-control">Address</a>
+        <div class="mb-3" style="margin: 20px">
+          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username:</label>
+        </div>
+        <div class="mb-3" style="margin: 20px">
+          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email: <%= current_user.email %></label>
+        </div>
+        <div class="mb-3" style="margin: 20px">
+          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Coins:</label>
+        </div>
+
+        <div class="mb-3">
+          <a href="#" class="btn btn-primary form-control">Cash in Now</a>
+        </div>
+  <!--action button-->
+        <div class="row">
+          <div class="col">
+            <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-primary form-control'%>
+          </div>
+          <div class="col">
+            <a href="#" class="btn btn-primary form-control">Address</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 </div>
 
 <!--Footer-->
