--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -72,10 +72,8 @@
     <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
   </div>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%#= render "users/shared/error_messages", resource: resource %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <%= form_for(resource, as: resource_name, url: user_registration_path, html: { method: :put }) do |f| %>
+    <%= render "users/shared/error_messages", resource: @user %>
     <div class="field">
       <%= f.label :image %>
       <%= f.file_field :image, class: 'form-control' %>
