--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -75,7 +75,7 @@
           <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
         </div>
         <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username:</label>
+          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username: <%= current_user.username %></label>
         </div>
         <div class="mb-3" style="margin: 20px">
           <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email: <%= current_user.email %></label>
