--- a/app/views/users/addresses/index.html.erb
+++ b/app/views/users/addresses/index.html.erb
@@ -1,3 +1,4 @@
+<!--header-->
 <nav class="navbar navbar-light bg-light fixed-top">
   <div class="container-fluid">
     <%= link_to 'Logo', client_root_path, class: 'navbar-brand' %>
@@ -63,39 +64,43 @@
   </div>
 </nav>
 
-<!--Show Page-->
-<div class="container" style="margin-top: 100px">
+<!--Index Page-->
+<div class="container" style="height: 100vh">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-    <div class="card">
-      <div class="card-body">
-        <div class="d-flex justify-content-md-center" >
-          <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
-        </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username: <%= current_user.username %></label>
-        </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email: <%= current_user.email %></label>
-        </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Coins: </label>
-        </div>
-
-        <div class="mb-3">
-          <a href="#" class="btn btn-primary form-control">Cash in Now</a>
-        </div>
   <!--action button-->
-        <div class="row">
-          <div class="col">
-            <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-primary form-control'%>
-          </div>
-          <div class="col">
-            <%= link_to "Address", users_addresses_path, class: 'btn btn-primary form-control'%>
-          </div>
+  <div class="row">
+    <div class="col">
+      <%= link_to "Back", users_profile_path, class: 'btn btn-primary form-control'%>
+    </div>
+    <div class="col">
+      <%= link_to "Add Address", new_users_address_path, class: 'btn btn-primary form-control'%>
+    </div>
+  </div>
+  <br>
+
+  <% @addresses.each do |address| %>
+    <div class="card" style="background-color: lightgray">
+      <div class="card-body" style="padding: 10px; background-color: lightcyan; margin: 10px">
+        <%= address.is_default == true ? 'Default' : ''%>
+        <%= address.genre %>
+        <div class="mb-2" >
+          <label for="colFormLabelSm" class="col-sm-6 col-form-label col-form-label-sm">Full Name: <%= address.name %></label>
         </div>
+        <div class="mb-2">
+          <label for="colFormLabelSm" class="col-sm-6 col-form-label col-form-label-sm">Phone Number: <%= address.phone_number %></label>
+        </div>
+        <div class="mb-2">
+          <label for="colFormLabelSm" class="col-sm-6 col-form-label col-form-label-sm">
+            Address: <%= address.street_address%> <%= address&.region.name%>, <%= address&.province.name%>, <%= address&.city.name%>, <%= address&.barangay.name%>  </label>
+        </div>
+          <%= link_to 'Edit', edit_users_address_path(address), class: 'btn btn-info'%>
+
+        <%= button_to "Delete", users_address_path(address), method: :delete, data: { confirm: "Are you sure?" }, class: 'btn btn-danger'  unless address.is_default %>
       </div>
     </div>
+    <br>
+  <% end %>
 </div>
 
 <!--Footer-->
