--- a/app/views/users/addresses/new.html.erb
+++ b/app/views/users/addresses/new.html.erb
@@ -1,3 +1,4 @@
+<!--header-->
 <nav class="navbar navbar-light bg-light fixed-top">
   <div class="container-fluid">
     <%= link_to 'Logo', client_root_path, class: 'navbar-brand' %>
@@ -63,42 +64,77 @@
   </div>
 </nav>
 
-<!--Show Page-->
-<div class="container" style="margin-top: 100px">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-    <div class="card">
-      <div class="card-body">
-        <div class="d-flex justify-content-md-center" >
-          <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
-        </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username: <%= current_user.username %></label>
-        </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email: <%= current_user.email %></label>
-        </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Coins: </label>
-        </div>
 
-        <div class="mb-3">
-          <a href="#" class="btn btn-primary form-control">Cash in Now</a>
-        </div>
-  <!--action button-->
-        <div class="row">
-          <div class="col">
-            <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-primary form-control'%>
-          </div>
-          <div class="col">
-            <%= link_to "Address", users_addresses_path, class: 'btn btn-primary form-control'%>
-          </div>
-        </div>
-      </div>
+<!--Page-->
+<div class="container" style="margin-top: 100px">
+  <% if @address.errors.any? %>
+    <% @address.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  <% end %>
+  <div class="row">
+    <div class="col">
+      <%= link_to "Back", users_addresses_path, class: 'btn btn-primary form-control'%>
     </div>
+    <div class="col text-danger text-center bg-light">
+      <h4>YOU CAN CREATE FIVE ADDRESS ONLY</h4>
+    </div>
+  </div>
+
+  <%= form_for @address, url: users_addresses_path(@address), method: :post do |f| %>
+    <div class="field">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="field">
+      <%= f.label :phone_number %>
+      <%= f.text_field :phone_number, class: 'form-control' %>
+    </div>
+
+    <div class="field">
+      <%= f.label :street_address %>
+      <%= f.text_field :street_address, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <br>
+      <%= f.select(:genre, Address.genres.keys.map {|key| [key.humanize, key]}, {:prompt => 'Genre'}, class: 'form-control')%>
+    </div>
+
+    <div class="field">
+      <%= f.label :region_id %>
+      <%= f.collection_select :region_id, Region.order(:region_name),:id,:region_name, {:prompt => 'Regions'}, include_blank: true, class: 'form-control' %>
+    </div>
+
+    <div class="field">
+      <%= f.label :province_id %>
+      <%= f.collection_select :province_id, Province.order(:name),:id,:name, {:prompt => 'Province'}, include_blank: true, class: 'form-control' %>
+    </div>
+
+    <div class="field">
+      <%= f.label :city_id %>
+      <%= f.collection_select :city_id, City.order(:name),:id,:name, {:prompt => 'City'}, include_blank: true, class: 'form-control' %>
+    </div>
+
+    <div class="field">
+      <%= f.label :barangay_id %>
+      <%= f.collection_select :barangay_id, Barangay.where("id <= ?", 100 ).order(:name),:id,:name, {:prompt => 'Barangay'}, include_blank: true, class: 'form-control' %>
+    </div>
+
+    <div class="field">
+      <%= f.label :remark %>
+      <%= f.text_area :remark, class: 'form-control' %>
+    </div>
+
+    <%= f.check_box :is_default %>
+    <%= f.label :is_default, 'Default' %>
+
+    <%= f.submit "Create", class: 'border btn btn-primary form-control' %>
+    <% end %>
 </div>
 
-<!--Footer-->
+<!--footer-->
 <ul class="nav bg-light justify-content-center fixed-bottom ">
   <li class="nav-item">
     <a class="nav-link" href="#">Share</a>
@@ -116,19 +152,3 @@
     <%= link_to "Me", users_profile_path, class: 'nav-link' %>
   </li>
 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
