[Feature 7] Invite Page

--- a/app/views/users/invite_people/invite_qr.html.erb
+++ b/app/views/users/invite_people/invite_qr.html.erb
@@ -64,83 +64,25 @@
   </div>
 </nav>
 
-<!--Index Page-->
-<div class="container" style="height: 100vh">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-  <div class="row">
-    <div class="col">
-      <%= link_to "Back", users_addresses_path, class: 'btn btn-primary form-control'%>
+<!--Page-->
+<div class="container" style="margin-top: 100px">
+  <div class="card text-center border border-info bg-transparent" style="background-image: url('/gradienta-ix_kUDzCczo-unsplash.jpg'); background-size: cover">
+    <div class="card-header bg-transparent text-light border border-info">
+      QR CODE
     </div>
-    <div class="col"></div>
-  </div>
-
-  <% if @address.errors.any? %>
-    <% @address.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  <% end %>
-
-  <%= form_for @address, url: users_address_path(@address), method: :patch do |f| %>
-    <div class="field">
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :phone_number %>
-      <%= f.text_field :phone_number, class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :street_address %>
-      <%= f.text_field :street_address, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
+    <div class="card-body">
+      <div class="text-center">
+        <%= @svg.html_safe %>
+      </div>
       <br>
-      <%= f.select(:genre, Address.genres.keys.map {|key| [key.humanize, key]}, {:prompt => 'Genre'}, class: 'form-control')%>
+      <div class="text-center text-uppercase">
+        <%= link_to @url, @url, class: "btn text-dark bg-info border border-none"%>
+      </div>
     </div>
-
-    <div class="field">
-      <%= f.label :region_id %>
-      <%= f.collection_select :region_id, Region.order(:region_name),:id,:region_name, {:prompt => 'Regions'}, include_blank: true, class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :province_id %>
-      <%= f.collection_select :province_id, Province.order(:name),:id,:name, {:prompt => 'Province'}, include_blank: true, class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :city_id %>
-      <%= f.collection_select :city_id, City.order(:name),:id,:name, {:prompt => 'City'}, include_blank: true, class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :barangay_id %>
-      <%= f.collection_select :barangay_id, Barangay.where("id <= ?", 100 ).order(:name),:id,:name, {:prompt => 'Barangay'}, include_blank: true, class: 'form-control' %>
-    </div>
-
-    <div class="field">
-      <%= f.label :remark %>
-      <%= f.text_area :remark, class: 'form-control' %>
-    </div>
-
-    <% unless @address.is_default %>
-      <%= f.check_box :is_default %>
-      <%= f.label :is_default, 'Default' %>
-    <% else %>
-      <%= f.check_box :is_default, onclick:"return false;", checked:true%>
-      <%= f.label :is_default, 'Default' %>
-    <% end %>
-
-    <%= f.submit "UPDATE", class: 'border btn btn-primary form-control' %>
-  <% end %>
+  </div>
 </div>
 
-
-<!--Footer-->
+<!--footer-->
 <ul class="nav bg-light justify-content-center fixed-bottom ">
   <li class="nav-item">
     <a class="nav-link" href="#">Share</a>
@@ -158,19 +100,3 @@
     <%= link_to "Me", users_profile_path, class: 'nav-link' %>
   </li>
 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
