--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -65,7 +65,6 @@
   </div>
 </nav>
 
-
 <!--Edit Page-->
 <div class="container" style="height: 100vh">
   <div class="d-flex justify-content-center" >
@@ -134,7 +133,7 @@
     <a class="nav-link" href="#">Share</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Invite</a>
+    <%= link_to "Invite", users_invite_people_path, class: 'nav-link'%>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Lottery</a>
