--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -52,9 +52,15 @@
                 </li>
               </ul>
               <!-- Pills navs -->
-
                 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                   <%= render "users/shared/error_messages", resource: resource %>
+                  <% if cookies[:promoter] %>
+                  <div class="field">
+                    <%= f.label :promoter %>
+                    <br>
+                    <%= f.email_field :parent, autofocus: true, autocomplete: "email", value: cookies[:promoter], readonly: true %>
+                  </div>
+                  <% end %>
 
                   <div class="field">
                     <%= f.label :email %><br />
@@ -91,7 +97,7 @@
     <a class="nav-link" href="#">Share</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Invite</a>
+    <%= link_to "Invite", users_invite_people_path, class: 'nav-link'%>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Lottery</a>
