--- a/app/views/users/invite_people/invite_qr.html.erb
+++ b/app/views/users/invite_people/invite_qr.html.erb
@@ -66,8 +66,8 @@
 
 <!--Page-->
 <div class="container" style="margin-top: 100px">
-  <div class="card text-center border border-info bg-transparent" style="background-image: url('/gradienta-ix_kUDzCczo-unsplash.jpg'); background-size: cover">
-    <div class="card-header bg-transparent text-light border border-info">
+  <div class="card text-center border border-info bg-transparent" style="background-image: url('/sd.png'); background-size: initial; border-radius: 20px" >
+    <div class="card-header bg-transparent text-info border border-info" style="border-top-left-radius: 20px; border-top-right-radius: 20px">
       QR CODE
     </div>
     <div class="card-body">
