--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,70 +1,3 @@
-
-
-<nav class="navbar navbar-light bg-light fixed-top">
-  <div class="container-fluid">
-    <%= link_to 'Logo', client_root_path, class: 'navbar-brand' %>
-    <ul class="nav">
-      <li class="nav-item">
-        <%= link_to "Log in", new_user_session_path, class: 'nav-link' unless user_signed_in? %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Sign up", new_user_registration_path, class: 'nav-link' unless user_signed_in? %>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Language</a>
-      </li>
-      <li class="nav-item">
-        <button class="navbar-toggler" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </li>
-    </ul>
-
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Info</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body text-decoration-none">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-
-          <% if current_user %>
-            <li class="nav-item">
-              Username:
-            </li>
-            <li class="nav-item">
-              Email: <%= current_user.email %>
-            </li>
-            <li class="nav-item">
-              Coins:
-            </li>
-            <div class="d-grid gap-2">
-              <button class="btn btn-primary" type="button">CASH IN NOW</button>
-            </div>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <%= link_to "My Profile", users_profile_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: 'nav-link' %>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">Facebook</a>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-  </div>
-</nav>
-
 <!--Edit Page-->
 <div class="container" style="height: 100vh">
   <div class="d-flex justify-content-center" >
@@ -126,25 +59,8 @@
     </div>
   <% end %>
 </div>
+<%= render "layouts/nav" %>
 
-<!--Footer-->
-<ul class="nav bg-light justify-content-center fixed-bottom ">
-  <li class="nav-item">
-    <a class="nav-link" href="#">Share</a>
-  </li>
-  <li class="nav-item">
-    <%= link_to "Invite", users_invite_people_path, class: 'nav-link'%>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Lottery</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Shop</a>
-  </li>
-  <li class="nav-item">
-    <%= link_to "Me", users_profile_path, class: 'nav-link' %>
-  </li>
-</ul>
 
 
 
