--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,41 +1,4 @@
-<nav class="navbar navbar-light bg-light fixed-top">
-  <div class="container-fluid">
-    <%= link_to 'Logo', client_root_path, class: 'navbar-brand' %>
-    <ul class="nav">
-      <li class="nav-item">
-        <%= link_to "Log in", new_session_path(resource_name), class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Sign up", new_user_registration_path, class: "nav-link " %>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Language</a>
-      </li>
-      <li class="nav-item">
-        <button class="navbar-toggler" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </li>
-    </ul>
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Info</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Facebook</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</nav>
-
+<!--Sign up-->
 <section class="vh-100" style="background-color: #ffff;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -91,21 +54,4 @@
    </div>
   </div>
 </section>
-
-<ul class="nav bg-light justify-content-center fixed-bottom ">
-  <li class="nav-item">
-    <a class="nav-link" href="#">Share</a>
-  </li>
-  <li class="nav-item">
-    <%= link_to "Invite", users_invite_people_path, class: 'nav-link'%>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Lottery</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Shop</a>
-  </li>
-  <li class="nav-item">
-    <%= link_to "Me", users_profile_path, class: 'nav-link'%>
-  </li>
-</ul>
+<%= render "layouts/nav" %>
