[Feature 10] Item Model

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -16,7 +16,7 @@
                 <%= link_to "User List", admins_users_path, class: 'nav-link px-5 text-info' %>
               </li>
               <li>
-                <a href="#" class="nav-link px-5 text-info"> <span class="d-none d-sm-inline"></span> Item List</a>
+                <%= link_to "Item List", admins_items_path, class: 'nav-link px-5 text-info' %>
               </li>
             </ul>
           </li>
