[Feature 12] Category Model

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -18,6 +18,9 @@
               <li>
                 <%= link_to "Item List", admins_items_path, class: 'nav-link px-5 text-info' %>
               </li>
+              <li>
+                <%= link_to "Category List", admins_categories_path, class: 'nav-link px-5 text-info' %>
+              </li>
             </ul>
           </li>
 
