--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -18,6 +18,7 @@
         <th scope="col">Quantity</th>
         <th scope="col">Minimum Bets</th>
         <th scope="col">State</th>
+        <th scope="col">Category</th>
         <th scope="col">Batch Count</th>
         <th scope="col">Online At</th>
         <th scope="col">Offline At</th>
@@ -37,6 +38,7 @@
           <td><%= item.quantity %></td>
           <td><%= item.minimum_bets %></td>
           <td><%= item.state %></td>
+          <td><%= item.category&.name %></td>
           <td><%= item.batch_count %></td>
           <td><%= item.online_at %></td>
           <td><%= item.offline_at %></td>
