--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -72,7 +72,7 @@
     <%= link_to "Invite", users_invite_people_path, class: 'nav-link'%>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Lottery</a>
+    <%= link_to "Lottery", users_lottery_path, class: 'nav-link'%>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Shop</a>
