--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,9 +1,8 @@
 <!--Edit Page-->
 <div class="container" style="height: 100vh">
-  <div class="d-flex justify-content-center" >
+  <div class="d-flex justify-content-center">
     <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
   </div>
-
   <%= form_for(resource, as: resource_name, url: user_registration_path, html: { method: :put }) do |f| %>
     <%= render "users/shared/error_messages", resource: @user %>
     <div class="field">
@@ -27,7 +26,7 @@
 
     <div class="field">
       <%= f.label :phone, 'Phone Number' %><br/>
-      <%= f.text_field :phone, autofocus: true, autocomplete: "phone", class: 'form-control'%>
+      <%= f.text_field :phone, autofocus: true, autocomplete: "phone", class: 'form-control' %>
     </div>
 
     <div class="field">
@@ -48,14 +47,14 @@
       <%= f.label :password_confirmation %><br/>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
     </div>
-<br>
+    <br>
     <div class="row">
-        <div class="col">
-          <%= f.submit "Update", class: 'border btn btn-primary form-control' %>
-        </div>
-        <div class="col">
-          <%= link_to "Back", :back, class: 'btn btn-primary form-control' %>
-        </div>
+      <div class="col">
+        <%= f.submit "Update", class: 'btn text-light form-control', style: 'background-color: #000033' %>
+      </div>
+      <div class="col">
+        <%= link_to "Back", users_profile_path, class: 'btn text-light form-control', style: 'background-color: #000033' %>
+      </div>
     </div>
   <% end %>
 </div>
