--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,60 +1,60 @@
-<nav class="navbar navbar-light bg-light fixed-top" >
+<nav class="navbar navbar-light fixed-top" style="background-color: #000033">
   <div class="container-fluid">
-    <%= link_to 'Logo', client_root_path, class: 'navbar-brand' %>
+    <%= link_to client_root_path, class: 'navbar-brand text-light' do %>
+      <img alt="logo" src="/rem.png">
+    <% end %>
     <ul class="nav">
       <li class="nav-item">
-        <%= link_to "Log in", new_user_session_path, class: 'nav-link' unless user_signed_in? %>
+        <%= link_to "Log in", new_user_session_path, class: 'nav-link' if current_user.blank? %>
       </li>
       <li class="nav-item">
-        <%= link_to "Sign up", new_user_registration_path, class: 'nav-link' unless user_signed_in? %>
+        <%= link_to "Sign up", new_user_registration_path, class: 'nav-link' if current_user.blank? %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Language</a>
       </li>
       <li class="nav-item">
-        <button class="navbar-toggler" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        <button class="navbar-toggler text-bg-light border-0" data-bs-toggle="offcanvas" href="#offcanvasExample" aria-controls="offcanvasExample">
           <span class="navbar-toggler-icon"></span>
         </button>
       </li>
     </ul>
 
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Info</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
+    <div class="offcanvas offcanvas-start text-white" style="padding-top: 30px; background-color: #000033" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
       <div class="offcanvas-body text-decoration-none">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-
           <% if current_user %>
             <li class="nav-item">
-              Username:
+              <%= image_tag current_user.image.url, class: 'rounded-circle nav-link', style: 'height: 80px' if current_user.image.url %>
             </li>
             <li class="nav-item">
-              Email: <%= current_user.email %>
+              <span class="text-secondary">Username:</span> <%= current_user.username %>
             </li>
             <li class="nav-item">
-              Coins:
+              <span class="text-secondary">Email:</span> <%= current_user.email %>
+            </li>
+            <li class="nav-item">
+              <span class="text-secondary">Coins:</span>
             </li>
             <div class="d-grid gap-2">
               <button class="btn btn-primary" type="button">CASH IN NOW</button>
             </div>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link text-light" href="#">Contact Us</a>
             </li>
             <li class="nav-item">
-              <%= link_to "My Profile", users_profile_path, class: 'nav-link' %>
+              <%= link_to "My Profile", users_profile_path, class: 'nav-link text-light' %>
             </li>
             <li class="nav-item">
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: 'nav-link' %>
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" }, class: 'nav-link text-light' %>
             </li>
           <% else %>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link text-light" href="#">Contact Us</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Facebook</a>
+              <a class="nav-linkt text-light" href="#">Facebook</a>
             </li>
           <% end %>
         </ul>
@@ -64,20 +64,20 @@
 </nav>
 
 <!--Footer-->
-<ul class="nav bg-light justify-content-center fixed-bottom ">
+<ul class="nav bg-light justify-content-center fixed-bottom">
   <li class="nav-item">
-    <a class="nav-link" href="#">Share</a>
+    <a class="nav-link" style="color: #000033" href="#">Share</a>
   </li>
   <li class="nav-item">
-    <%= link_to "Invite", users_invite_people_path, class: 'nav-link'%>
+    <%= link_to "Invite", users_invite_people_path, class: 'nav-link', style: 'color: #000033' %>
   </li>
   <li class="nav-item">
-    <%= link_to "Lottery", users_lottery_path, class: 'nav-link'%>
+    <%= link_to "Lottery", users_lottery_path, class: 'nav-link', style: 'color: #000033' %>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Shop</a>
+    <a class="nav-link" style="color: #000033" href="#">Shop</a>
   </li>
   <li class="nav-item">
-    <%= link_to "Me", users_profile_path, class: 'nav-link' if current_user %>
+    <%= link_to "Me", users_profile_path, class: 'nav-link', style: 'color: #000033' if current_user %>
   </li>
 </ul>
