--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <style>
-
+    body{
+        background-color: #F5F5F5;
+    }
     </style>
   </head>
 
   <body>
-
     <%= yield %>
   </body>
 </html>
