--- a/app/views/users/addresses/edit.html.erb
+++ b/app/views/users/addresses/edit.html.erb
@@ -1,20 +1,14 @@
 <!--Index Page-->
 <div class="container" style="height: 100vh">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-  <div class="row">
+  <div class="row" style="padding-top: 70px">
     <div class="col">
-      <%= link_to "Back", users_addresses_path, class: 'btn btn-primary form-control'%>
+      <%= link_to "Back", users_addresses_path, class: 'btn text-light form-control', style: 'background-color: #000033' %>
     </div>
-    <div class="col"></div>
+    <div class="col text-danger text-center bg-transparent">
+      <h4>YOU CAN CREATE FIVE ADDRESS ONLY</h4>
+    </div>
   </div>
-
-  <% if @address.errors.any? %>
-    <% @address.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  <% end %>
-
+  <%= render "users/shared/error_messages", resource: @address %>
   <%= form_for @address, url: users_address_path(@address), method: :patch do |f| %>
     <div class="field">
       <%= f.label :name %>
@@ -33,27 +27,27 @@
 
     <div class="form-group">
       <br>
-      <%= f.select(:genre, Address.genres.keys.map {|key| [key.humanize, key]}, {:prompt => 'Genre'}, class: 'form-control')%>
+      <%= f.select(:genre, Address.genres.keys.map { |key| [key.humanize, key] }, { :prompt => 'Genre' }, class: 'form-control') %>
     </div>
 
     <div class="field">
       <%= f.label :region_id %>
-      <%= f.collection_select :region_id, Region.order(:region_name),:id,:region_name, {:prompt => 'Regions'}, include_blank: true, class: 'form-control' %>
+      <%= f.collection_select :region_id, Region.order(:region_name), :id, :region_name, { :prompt => 'Regions' }, include_blank: true, class: 'form-control' %>
     </div>
 
     <div class="field">
       <%= f.label :province_id %>
-      <%= f.collection_select :province_id, Province.order(:name),:id,:name, {:prompt => 'Province'}, include_blank: true, class: 'form-control' %>
+      <%= f.collection_select :province_id, Province.order(:name), :id, :name, { :prompt => 'Province' }, include_blank: true, class: 'form-control' %>
     </div>
 
     <div class="field">
       <%= f.label :city_id %>
-      <%= f.collection_select :city_id, City.order(:name),:id,:name, {:prompt => 'City'}, include_blank: true, class: 'form-control' %>
+      <%= f.collection_select :city_id, City.order(:name), :id, :name, { :prompt => 'City' }, include_blank: true, class: 'form-control' %>
     </div>
 
     <div class="field">
       <%= f.label :barangay_id %>
-      <%= f.collection_select :barangay_id, Barangay.where("id <= ?", 100 ).order(:name),:id,:name, {:prompt => 'Barangay'}, include_blank: true, class: 'form-control' %>
+      <%= f.collection_select :barangay_id, Barangay.where("id <= ?", 100).order(:name), :id, :name, { :prompt => 'Barangay' }, include_blank: true, class: 'form-control' %>
     </div>
 
     <div class="field">
@@ -61,15 +55,15 @@
       <%= f.text_area :remark, class: 'form-control' %>
     </div>
 
-    <% unless @address.is_default %>
+    <% if @address.is_default.blank? %>
       <%= f.check_box :is_default %>
       <%= f.label :is_default, 'Default' %>
     <% else %>
-      <%= f.check_box :is_default, onclick:"return false;", checked:true%>
+      <%= f.check_box :is_default, onclick: "return false;", checked: true %>
       <%= f.label :is_default, 'Default' %>
     <% end %>
 
-    <%= f.submit "UPDATE", class: 'border btn btn-primary form-control' %>
+    <%= f.submit "Update", class: 'text-light btn form-control', style: 'background-color: #000033' %>
   <% end %>
 </div>
 <%= render "layouts/nav" %>
