--- a/app/views/users/home/index.html.erb
+++ b/app/views/users/home/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="container">
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -26,7 +24,7 @@
 </div>
 
 
-<section class=" text-light bg-dark" style="height: 4vh;">
+<section class="text-light" style="height: 4vh;background-color: #000033">
   <div>
     <div class="container">
       <div class="ticker">
@@ -44,6 +42,7 @@
 <!--feedback-->
 <section style="padding-top: 10px">
   <div class="container overflow-hidden">
+    <%= render 'layouts/errors_message' %>
     <h4>Winners Feedback</h4>
     <div class="row">
       <div class="col-4">
