--- a/app/views/users/lotteries/lottery.html.erb
+++ b/app/views/users/lotteries/lottery.html.erb
@@ -23,15 +23,15 @@
   </div>
 </div>
 
-<div class=" text-light bg-dark" style="height: 4vh;"></div>
+<div class=" text-light" style="height: 4vh;background-color: #000033"></div>
 <section style="padding-bottom: 60px; padding-top: 10px">
   <div class="container overflow-hidden">
     <ul class="nav justify-content-start">
-      <%= link_to "All", users_lottery_path, class: 'nav-link text-info rounded-circle bg-secondary' %>
+      <%= link_to "All", users_lottery_path, class: 'nav-link text-info' %>
       <% @categories.each do |category| %>
-      <li class="nav-item active">
-        <%= link_to category.name, users_lottery_path(category: category.name), class: "filter nav-link text-info"  %>
-      </li>
+        <li class="nav-item active">
+          <%= link_to category.name, users_lottery_path(category: category.name), class: "filter nav-link text-info" %>
+        </li>
       <% end %>
     </ul>
     <br>
@@ -39,20 +39,20 @@
       <div class="row" style="font-family: Verdana">
         <% @items.each do |item| %>
           <div class="col-6 col-md-4 col-sm-6 d-flex align-self-stretch">
-          <div class="card shadow-none mb-2 border-0 bg-light">
-            <div class="card-body d-flex flex-column">
-              <%= image_tag item.image.url, class: 'd-block h-100' if item.image?%>
-              <p style="font-size: 12px; width: auto">
-                <%= item.name %>
-              </p>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            <div class="card shadow-none mb-2 border-0 bg-light">
+              <div class="card-body d-flex flex-column">
+                <%= image_tag item.image.url, class: 'd-block h-100' if item.image.present? %>
+                <p style="font-size: 12px; width: auto">
+                  <%= item.name %>
+                </p>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      <% end %>
-       </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </section>
