--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -1,36 +1,36 @@
 <!--Show Page-->
 <div class="container" style="margin-top: 100px">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-    <div class="card">
-      <div class="card-body">
-        <div class="d-flex justify-content-md-center" >
-          <%= image_tag "#{request.base_url}/#{current_user.image.url}" if current_user.image %>
+  <%= render 'layouts/errors_message' %>
+  <div class="card border-0">
+    <div class="card-body">
+      <div class="row">
+        <div class="col-3 col-lg-1">
+          <%= image_tag current_user.image.url, class: 'rounded-circle', style: 'height: 80px' if current_user.image.url %>
         </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Username: <%= current_user.username %></label>
+        <div class="col-9 col-lg-11">
+          <label for="colFormLabelSm" class="col-sm-12 col-form-label col-form-label-sm d-block"><span class="text-secondary">Username:</span> <%= current_user.username %>
+          </label>
+          <label for="colFormLabelSm" class="col-sm-12 col-form-label col-form-label-sm d-block"><span class="text-secondary">Email:</span> <%= current_user.email %>
+          </label>
+          <label for="colFormLabelSm" class="col-sm-12 col-form-label col-form-label-sm d-block"><span class="text-secondary">Coins:</span>
+          </label>
         </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email: <%= current_user.email %></label>
+        <div class="mb-2">
+          <a href="#" class="btn form-control text-light" style="background-color: #000033">CASH IN NOW</a>
         </div>
-        <div class="mb-3" style="margin: 20px">
-          <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Coins: </label>
+      </div>
+      <!--action button-->
+      <div class="row">
+        <div class="col">
+          <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn form-control text-light', style: 'background-color: #000033' %>
         </div>
-
-        <div class="mb-3">
-          <a href="#" class="btn btn-primary form-control">Cash in Now</a>
-        </div>
-  <!--action button-->
-        <div class="row">
-          <div class="col">
-            <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-primary form-control'%>
-          </div>
-          <div class="col">
-            <%= link_to "Address", users_addresses_path, class: 'btn btn-primary form-control'%>
-          </div>
+        <div class="col">
+          <%= link_to "Address", users_addresses_path, class: 'btn form-control text-light', style: 'background-color: #000033' %>
         </div>
       </div>
     </div>
+  </div>
+</div>
 </div>
 <%= render "layouts/nav" %>
 
