--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -21,6 +21,9 @@
               <li>
                 <%= link_to "Category List", admins_categories_path, class: 'nav-link px-5 text-info' %>
               </li>
+              <li>
+                <%= link_to "Bet List", admins_bets_path, class: 'nav-link px-5 text-info' %>
+              </li>
             </ul>
           </li>
           <li>
@@ -42,3 +45,5 @@
     <%= yield %>
   </div>
 </div>
+
+
