--- a/app/views/users/lotteries/index.html.erb
+++ b/app/views/users/lotteries/index.html.erb
@@ -27,10 +27,10 @@
 <section style="padding-bottom: 60px; padding-top: 10px">
   <div class="container overflow-hidden">
     <ul class="nav justify-content-start">
-      <%= link_to "All", users_lottery_path, class: 'nav-link text-info' %>
+      <%= link_to "All", users_lotteries_path, class: 'nav-link text-info' %>
       <% @categories.each do |category| %>
         <li class="nav-item active">
-          <%= link_to category.name, users_lottery_path(category: category.name), class: "filter nav-link text-info" %>
+          <%= link_to category.name, users_lotteries_path(category: category.name), class: "filter nav-link text-info" %>
         </li>
       <% end %>
     </ul>
@@ -41,7 +41,9 @@
           <div class="col-6 col-md-4 col-sm-6 d-flex align-self-stretch">
             <div class="card shadow-none mb-2 border-0 bg-light">
               <div class="card-body d-flex flex-column">
-                <%= image_tag item.image.url, class: 'd-block h-100' if item.image.present? %>
+                <div class="h-100">
+                  <%= link_to (image_tag item.image.url, class: 'd-block h-100 w-100' if item.image.present?), users_lottery_path(item) %>
+                </div>
                 <p style="font-size: 12px; width: auto">
                   <%= item.name %>
                 </p>
@@ -57,13 +59,3 @@
   </div>
 </section>
 <%= render "layouts/nav" %>
-
-
-
-
-
-
-
-
-
-
