[Feature 17] Winner Model

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -24,6 +24,9 @@
               <li>
                 <%= link_to "Bet List", admins_bets_path, class: 'nav-link px-5 text-info' %>
               </li>
+              <li>
+                <%= link_to "Winner List", admins_winners_path, class: 'nav-link px-5 text-info' %>
+              </li>
             </ul>
           </li>
           <li>
