--- a/app/views/admins/bets/index.html.erb
+++ b/app/views/admins/bets/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col py-3">
-  <div class="card" style="background-color: #000033">
+  <div class="card mb-2" style="background-color: #000033">
     <h1 style="font-family: Courier" class="text-light text-center">Bet List</h1>
   </div>
   <div class="card">
@@ -28,7 +28,7 @@
           <div class="col-6">
             <div class="input-group">
               <span class="input-group-text">Start</span>
-              <%= datetime_field_tag :start, params[:start] , class: "form-control" %>
+              <%= datetime_field_tag :start, params[:start], class: "form-control" %>
             </div>
           </div>
           <div class="col-6">
@@ -38,11 +38,10 @@
             </div>
           </div>
         </div>
-        <%= link_to 'Reset', admins_bets_path, class: "btn btn-danger mt-2" %>
-        <%= submit_tag :Search, class: "btn btn-primary mt-2" %>
+        <%= link_to 'Reset', admins_bets_path, class: "btn btn-danger btn-sm mt-2" %>
+        <%= submit_tag :Search, class: "btn btn-primary btn-sm mt-2" %>
       <% end %>
-
-      <table class="table text-start table-bordered ">
+      <table class="table text-center table-bordered mt-2">
         <thead class="thead text-light bg-dark" style="font-family: 'Comic Sans MS'">
         <tr>
           <th scope="col">Serial Number</th>
@@ -50,6 +49,7 @@
           <th scope="col">Email</th>
           <th scope="col">State</th>
           <th scope="col">Created At</th>
+          <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
@@ -60,6 +60,13 @@
             <td><%= bet.user.email %></td>
             <td><%= bet.state %></td>
             <td><%= bet.created_at %></td>
+            <td>
+              <% if bet.may_cancel? %>
+                <%= link_to "Cancel", admins_bet_cancel_path(bet), class: 'btn btn-outline-info btn-sm col-12', data: { confirm: "Are you sure?" }, method: :put %>
+              <% else %>
+                <%= button_tag "Cancel", class: 'btn btn-outline-info btn-sm col-12', disabled: 'disabled' %>
+              <% end %>
+            </td>
           </tr>
         <% end %>
         </tbody>
@@ -69,5 +76,4 @@
       <% end %>
     </div>
   </div>
-  <br>
 </div>
