--- a/app/views/users/lotteries/index.html.erb
+++ b/app/views/users/lotteries/index.html.erb
@@ -48,7 +48,7 @@
                   <%= item.name %>
                 </p>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                  <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width:<%= progress(item) %>%;" aria-valuenow="<%= progress(item) %>" aria-valuemin="0" aria-valuemax="100"><%= progress(item) %>%</div>
                 </div>
               </div>
             </div>
