--- a/app/views/users/lotteries/show.html.erb
+++ b/app/views/users/lotteries/show.html.erb
@@ -20,7 +20,9 @@
             <%= image_tag @item.image.url, class: 'w-100' if @item.image.present? %>
             <%= @item.name %>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+              <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width:<%= progress(@item) %>%;" aria-valuenow="<%= progress(@item) %>" aria-valuemin="0" aria-valuemax="100"><%= progress(@item) %>
+                %
+              </div>
             </div>
             <%= form_for @bet, url: users_lotteries_path(@bet), method: :post do |f| %>
               <div class="field mt-2">
@@ -44,7 +46,9 @@
       </tr>
       <% if @current_bets.blank? %>
         <tr>
-          <td class="text-center" style="vertical-align: middle; background-color: whitesmoke; color: #000033">- You still not Bet -</td>
+          <td class="text-center" style="vertical-align: middle; background-color: whitesmoke; color: #000033">- You
+            still not Bet -
+          </td>
         </tr>
       <% end %>
       <% @current_bets.each do |current_bet| %>
