[Feature 19] Offer model

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -27,6 +27,9 @@
               <li>
                 <%= link_to "Winner List", admins_winners_path, class: 'nav-link px-5 text-info' %>
               </li>
+              <li>
+                <%= link_to "Offer List", admins_offers_path, class: 'nav-link px-5 text-info' %>
+              </li>
             </ul>
           </li>
           <li>
