--- a/app/views/admins/winners/index.html.erb
+++ b/app/views/admins/winners/index.html.erb
@@ -16,7 +16,7 @@
           </div>
           <div class="col-4">
             <%= label_tag :state %>
-            <%= select_tag :state, options_for_select(Winner.aasm.states.map(&:name)), { prompt: 'Choose State', class: "form-control form-select text-center" } %>
+            <%= select_tag :state, options_for_select(Winner.aasm.states.map(&:name), params[:state]), { prompt: 'Choose State', class: "form-control form-select text-center" } %>
           </div>
         </div>
         <div class="row text-lg-start">
@@ -60,12 +60,12 @@
             <td><%= concat_address(winner.address) %></td>
             <td><%= winner.created_at %></td>
             <td class="text-center">
-              <%= link_to "Submit", admins_winner_submit_path(winner), class: 'btn btn-info btn-sm', method: :put if winner.may_submit? %>
-              <%= link_to "Pay", admins_winner_pay_path(winner), class: 'btn btn-info btn-sm', method: :put if winner.may_pay? %>
-              <%= link_to "Ship", admins_winner_ship_path(winner), class: 'btn btn-info btn-sm', method: :put if winner.may_ship? %>
-              <%= link_to "Deliver", admins_winner_deliver_path(winner), class: 'btn btn-info btn-sm', method: :put if winner.may_deliver? %>
-              <%= link_to "Publish", admins_winner_publish_path(winner), class: 'btn btn-info btn-sm', method: :put if winner.may_publish? %>
-              <%= link_to "Remove Publish", admins_winner_remove_publish_path(winner), class: 'btn btn-info btn-sm', method: :put if winner.may_remove_publish? %>
+              <%= link_to "Submit", admins_winner_submit_path(winner), data: { confirm: "Are you sure?" }, class: 'btn btn-info btn-sm', method: :put if winner.may_submit? %>
+              <%= link_to "Pay", admins_winner_pay_path(winner), data: { confirm: "Are you sure?" }, class: 'btn btn-info btn-sm', method: :put if winner.may_pay? %>
+              <%= link_to "Ship", admins_winner_ship_path(winner), data: { confirm: "Are you sure?" }, class: 'btn btn-info btn-sm', method: :put if winner.may_ship? %>
+              <%= link_to "Deliver", admins_winner_deliver_path(winner), data: { confirm: "Are you sure?" }, class: 'btn btn-info btn-sm', method: :put if winner.may_deliver? %>
+              <%= link_to "Publish", admins_winner_publish_path(winner), data: { confirm: "Are you sure?" }, class: 'btn btn-info btn-sm', method: :put if winner.may_publish? %>
+              <%= link_to "Remove Publish", admins_winner_remove_publish_path(winner), data: { confirm: "Are you sure?" }, class: 'btn btn-info btn-sm', method: :put if winner.may_remove_publish? %>
             </td>
           </tr>
         <% end %>
