--- a/app/views/admins/offers/index.html.erb
+++ b/app/views/admins/offers/index.html.erb
@@ -22,6 +22,7 @@
         <div>
         </div>
       <% end %>
+      <%= render 'layouts/errors_message' %>
       <table class="table text-center table-bordered mt-2">
         <thead class="thead text-light bg-dark" style="font-family: 'Comic Sans MS'">
         <tr>
