--- a/app/views/admins/offers/new.html.erb
+++ b/app/views/admins/offers/new.html.erb
@@ -1,6 +1,6 @@
 <div class="col py-3">
   <div class="card" style="background-color: #000033">
-    <h1 style="font-family: Courier" class="text-light text-center"> Offer List</h1>
+    <h1 style="font-family: Courier" class="text-light text-center"> Create Offer Item</h1>
   </div>
   <br>
   <div class="container">
